lab1/Test/L1-A-3-43.output
Error Type A at Line 2
Error Type A at Line 4
Error Type A at Line 6
Error Type A at Line 10
Error Type B at Line 10
