lab1/Test/L1-A-3-43.cmm
struct Yd6hncX6g8XiyNOhvuyo {
  struct bTRq41ltTrcrP2 QmiPTdo0 $[ 312089980 ] ;
  int ikJmn5y1f = ! ! ZystZRuNH7Lk8mb = x8OdO1Ij2PqwdyoOmyW 
    $;
}vhk , hBk1 [ 1831244187 ] [ 690670022 ] [ 435617580 
  ] [ 388385204 ] [ 335442160 ] `[ 1241369813 ] [ 2052191157 
  ] 

;
\- 